# qt-chess

./: CMakeLists.txt  bishop.cpp  bishop.h  chessboard.cpp  chessboard.h  chesssquare.cpp  chesssquare.h  figure.cpp  game.cpp  game.h  icons.qrc  interface.cpp  interface.h  interface.ui  king.cpp  king.h  knight.cpp  pawn.h  player.cpp  queen.cpp  queen.h
figures/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
includes/: bishop.h  chessboard.h  figure.h  game.h  interface.h  king.h  knight.h  pawn.h  player.h  queen.h  rook.h
